<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/i_would_like_to"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonRecordRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickRecordRoute"
            android:text="@string/record_a_new_route" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickListRoutes"
            android:text="@string/list_all_routes" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickShowMarkers"
            android:text="@string/show_all_markers" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAnalyseStatistics"
            android:text="@string/analyse_statistics" />

        <Button
            android:id="@+id/buttonTrackGoals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTrackGoals"
            android:text="@string/track_goals" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>