<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.goplot.AnalyseStatisticsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AnalyseStatisticsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFastest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_3_fastest_routes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFastest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textViewTop3Longest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_3_longest_routes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewLongest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewChart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily_distance_totals_this_week" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>