<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.goplot.TrackGoalsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TrackGoalsActivity">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <TextView
                    android:id="@+id/textViewDistanceThisWeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/distance_this_week" />

                <TextView
                    android:id="@+id/textViewDistanceThisWeekValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{viewmodel.distanceThisWeek}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <TextView
                    android:id="@+id/textViewWeeklyDistanceGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weekly_distance_goal_km" />

                <EditText
                    android:id="@+id/editTextNumberWeeklyDistanceGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_weekly_goal"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    android:text="@={viewmodel.trackGoalsViewModelObservable.weeklyGoalAsString}" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/weeklyProgressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:progress="@{viewmodel.progressThisWeek}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <TextView
                    android:id="@+id/textViewDistanceThisMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/distance_this_month" />

                <TextView
                    android:id="@+id/textViewDistanceThisMonthValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{viewmodel.distanceThisMonth}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <TextView
                    android:id="@+id/textViewMonthlyDistanceGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monthly_distance_goal_km" />

                <EditText
                    android:id="@+id/editTextNumberMonthlyDistanceGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_monthly_goal"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    android:text="@={viewmodel.trackGoalsViewModelObservable.monthlyGoalAsString}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/monthlyProgressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:progress="@{viewmodel.progressThisMonth}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>